--- a/Dockerfile.standalone
+++ b/Dockerfile.standalone
@@ -6,7 +6,7 @@ RUN addgroup --gid 1001 dcmcsrv \
 &&  adduser --home /home/dcmcsrv --disabled-password --shell /bin/bash -G dcmcsrv -u 1001 dcmcsrv
 
 # Adding entrypoint and server files
-ADD --chown=dcmcsrv:dcmcsrv files/Entrypoint.sh /entrypoint.sh
+ADD --chown=dcmcsrv:dcmcsrv files/Entrypoint-standalone.sh /entrypoint.sh
 ADD --chown=dcmcsrv:dcmcsrv files/DeceasedCraft_Server_v5.5.5.zip /etc/DeceasedCraft/
 
 # Installing required packages
@@ -31,5 +31,5 @@ RUN cd /etc/DeceasedCraft \
 
 ADD --chown=dcmcsrv:dcmcsrv files/ops.json /etc/DeceasedCraft/DeceasedCraft_Server_v5.5.5/ops.json
 
-ENTRYPOINT [ "./entrypoint.sh" ]
+ENTRYPOINT [ "/entrypoint.sh" ]
 # ENTRYPOINT [ "/bin/ash" ]
